# weard-beard

./: .gitignore  README.md  docker-compose.yml
service1/: Cargo.toml  Dockerfile
service1/src/: config.rs  main.rs  publisher.rs  sensors.rs
service2/: Dockerfile  main.py  pyproject.toml
service2/src/: cli.py  config.py  main.py  rabbitmq.py  stats.py
service2/src/helpers/: config.py  rabbitmq.py  state.py
