[package]
name = "service1"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] } # For async runtime, time, sync, macros
serde = { version = "1.0", features = ["derive"] } # For deriving Serialize
uuid = { version = "1", features = ["v4", "serde"] } # For unique IDs
