[project]
name = "service2"
version = "0.1.0"
description = "Python service to consume sensor data, calculate stats, and provide CLI."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aio-pika>=9,<10",
]
license = { text = "MIT" }
authors = [
    { name = "Your Name", email = "your.email@example.com" },
]

[project.scripts]
recieve = "main:start"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
